perldelta sub constructor documentation
Covers commits 68cd13c6081a23a59561d3289dba5a99f73c1463,
a59b17fa6324328a12a1d86a5e187e07ba8cee6c, and
28ef70489d76deb9024de42a0571162f323148c8.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -188,11 +188,19 @@ Additionally, the following selected changes have been made:
 The documentation of C<newGIVENOP()> has been belatedly updated to
 account for the removal of lexical C<$_>.
 
+The API functions C<newCONSTSUB()> and C<newCONSTSUB_flags()> are
+documented much more comprehensively than before.
+
 =head3 L<perluniprops>
 
 For each binary table or property, the documentation now includes which
 characters in the range C<\x00-\xFF> it matches, as well as a list of
 the first few ranges of code points matched above that.
+
+=head3 L<perlintern>
+
+The internal functions C<newXS_len_flags()> and C<newATTRSUB_x()> are
+now documented.
 
 =over 4
 
