--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -191,6 +191,11 @@ account for the removal of lexical C<$_>.
 The API functions C<newCONSTSUB()> and C<newCONSTSUB_flags()> are
 documented much more comprehensively than before.
 
+=head3 L<perlop>
+
+The documentation for the C<\> referencing operator now explains the
+unusual context that it supplies to its operand.  [perl #131061]
+
 =head3 L<perluniprops>
 
 For each binary table or property, the documentation now includes which
