--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -196,6 +196,13 @@ documented much more comprehensively than before.
 The documentation for the C<\> referencing operator now explains the
 unusual context that it supplies to its operand.  [perl #131061]
 
+=head3 L<perlfunc>
+
+The documentation for the C<exists> operator no longer says that
+autovivification behaviour "may be fixed in a future release".
+We've determined that we're not going to change the default behaviour.
+[perl #127712]
+
 =head3 L<perluniprops>
 
 For each binary table or property, the documentation now includes which
