perldelta 3c0dbbbaeb55e36a6beabd1cfc9f0432053bcaf0

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -193,6 +193,9 @@ documented much more comprehensively than before.
 
 =head3 L<perlop>
 
+The general explanation of operator precedence and associativity has
+been corrected and clarified.  [perl #127391]
+
 The documentation for the C<\> referencing operator now explains the
 unusual context that it supplies to its operand.  [perl #131061]
 
