--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -472,6 +472,13 @@ assigned to.  [perl #130578]
 
 =item *
 
+Lengthy hexadecimal, octal, or binary floating point literals no
+longer cause undefined behaviour when parsing digits that are of such
+low significance that they can't affect the floating point value.
+[perl #131894]
+
+=item *
+
 C<open $$scalarref...> and similar invocations no longer leak the file
 handle.  [perl #115814]
 
