--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -225,6 +225,9 @@ autovivification behaviour "may be fixed in a future release".
 We've determined that we're not going to change the default behaviour.
 [perl #127712]
 
+A couple of small details in the documentation for the C<bless> operator
+have been clarified.  [perl #124428]
+
 =head3 L<perluniprops>
 
 For each binary table or property, the documentation now includes which
