perldelta 397baf232086e0a9ad6f881a9614d3dbaea853fc

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -529,6 +529,12 @@ or C<unimport> method.  It is now treated like any other string C<1>.
 
 =item *
 
+The C<readpipe()> built-in function now checks at compile time that
+it has only one parameter expression, and puts it in scalar context,
+thus ensuring that it doesn't corrupt the stack at runtime.  [perl #4574]
+
+=item *
+
 Perl's own C<malloc> no longer gets confused by attempts to allocate
 more than a gigabyte on a 64-bit platform.  [perl #119829]
 
