--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -238,6 +238,9 @@ The description of C<@INC> hooks in the documentation for C<require>
 has been corrected to say that filter subroutines receive a useless
 first argument.  [perl #115754]
 
+The documentation of C<use> now explains what syntactically qualifies
+as a version number for its module version checking feature.
+
 =head3 L<perluniprops>
 
 For each binary table or property, the documentation now includes which
