--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -358,6 +358,12 @@ XXX Describe change here
 
 =item *
 
+The warning about useless use of a concatenation operator in void context
+is now generated for expressions with multiple concatenations, such as
+C<$a.$b.$c>, which used to mistakenly not warn.  [perl #6997]
+
+=item *
+
 Warnings that a variable or subroutine "masks earlier declaration in same
 ...", or that an C<our> variable has been redeclared, have been moved to a
 new warnings category "shadow".  Previously they were in category "misc".
