retry gdbm_open() upon block size error
It is reported that gdbm_open() with default block size can fail on
filesystems with a non-power-of-two block size.  In that event, retry
opening, forcing a power-of-two block size.  Fixes [perl #119623].

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -187,6 +187,8 @@ core of its job.  [perl #110520]
 L<GDBM_File> has been upgraded from version 1.16 to 1.17.
 Its documentation now explains that C<each> and C<delete> don't mix in
 hashes tied to this module [perl #117449].
+It will now retry opening with an acceptable block size if asking gdbm
+to default the block size failed [perl #119623].
 
 =back
 
