perldelta: Avoid ‘deprecated’ for non-deprecated module
Saying the module is deprecated (in core) can easily be misunder-
stood.  The module itself is certainly not deprecated.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -225,8 +225,7 @@ in C<BEGIN> blocks.  [perl #96538]
 
 L<Locale::Codes> has been upgraded from version 3.54 to 3.55
 
-B<NOTE>: L<Locale::Codes> is deprecated in core and will be removed
-from Perl 5.30.
+B<NOTE>: L<Locale::Codes> scheduled to be removed from core in Perl 5.30.
 
 =item *
 
