enable PERL_OP_PARENT always
Remove support for PERL_NO_OP_PARENT, which was a way of turning off the
(on by default) PERL_OP_PARENT define.

See http://nntp.perl.org/group/perl.perl5.porters/248072.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -612,6 +612,11 @@ invisibly into the latter.  This does not happen except on threaded
 perls, as they aren't needed otherwise.  Be aware that which functions
 have reentrant versions varies from system to system.
 
+=item *
+
+The C<PERL_NO_OP_PARENT> build define is no longer supported, which means
+that perl is now always built with C<PERL_OP_PARENT> enabled.
+
 =back
 
 =head1 Selected Bug Fixes
