--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -81,6 +81,13 @@ reverted due to the extent of the trouble caused to CPAN modules.
 It is expected that smartmatch will be changed again in the future,
 but preceded by some kind of explicit deprecation.
 
+=head1 Deprecations
+
+=head2 Use of code points over 0xFF in string bitwise operators
+
+Some uses of these already are illegal after a previous deprecation
+cycle.  This deprecates the remaining uses.  See L<perldeprecation>.
+
 =head1 Performance Enhancements
 
 =over 4
